# ddfunKokkos

./: .gitignore  CMakeLists.txt  DHB-License.txt  README.md
src/: CMakeLists.txt  ddcomplex.hpp  ddconstants.hpp  ddouble.hpp  ddrand.hpp
unitTests/: CMakeLists.txt  ddfuna_partial.f90  unit_tests.cpp
utils/: generateConstants.py  generateUnitTestData.py  setup_jlse.sh
